--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -80,7 +80,7 @@ top: true
 favicon: ""
 
 #你的头像url
-avatar: "https://github.com/WeiDong97/WeiDong97.github.io/tree/master/themes/yilia/source/assets/img"
+avatar: "https://github.com/WeiDong97/WeiDong97.github.io/tree/master/themes/yilia/source/assets/img/1.jpg"
 
 #是否开启分享，如果不需要建议不要开启
 share_jia: false
