--- a/themes/hexo-theme-next-master/_config.yml
+++ b/themes/hexo-theme-next-master/_config.yml
@@ -611,8 +611,8 @@ changyan:
 # For more information: https://valine.js.org, https://github.com/xCss/Valine
 valine:
   enable: true
-  appid: cg1dkuXYgGxUNSTexj9wG3MA-gzGzoHsz# Your leancloud application appid
-  appkey: M8bYs4EdrjJVDvXrAy8FnToX# Your leancloud application appkey
+  appid: cg1dkuXYgGxUNSTexj9wG3MA-gzGzoHsz
+  appkey: M8bYs4EdrjJVDvXrAy8FnToX
   notify: false # Mail notifier
   verify: false # Verification code
   placeholder: Just go go # Comment box placeholder
