--- a/themes/hexo-theme-next-master/_config.yml
+++ b/themes/hexo-theme-next-master/_config.yml
@@ -165,7 +165,7 @@ avatar:
   # Replace the default image and set the url here.
   url: /images/1.jpg
   # If true, the avatar will be dispalyed in circle.
-  rounded: false
+  rounded: true
   # If true, the avatar will be rotated with the cursor.
   rotated: false
 
@@ -366,7 +366,7 @@ codeblock:
 back2top:
   enable: true
   # Back to top in sidebar.
-  sidebar: true
+  sidebar: false
   # Scroll percent label in b2t button.
   scrollpercent: true
 
@@ -867,7 +867,15 @@ canvas_ribbon:
   alpha: 0.6 # The transparency of the ribbon
   zIndex: -1 # The display level of the ribbon
 
-
+# Canvas-nest
+# Dependencies: https://github.com/theme-next/theme-next-canvas-nest
+canvas_nest:
+  enable: true
+  onmobile: true # 是否在手机上显示
+  color: "255,51,51" # RGB颜色设置
+  opacity: 0.5 # 线条透明度
+  zIndex: -1 # 显示级别
+  count: 160 # 线条的数量，越多越卡
 #! ---------------------------------------------------------------
 #! DO NOT EDIT THE FOLLOWING SETTINGS
 #! UNLESS YOU KNOW WHAT YOU ARE DOING
